<resources>
    <string name="app_name">CreditApp</string>


    <string name="ac_launch_wellcome_tv">Credit App</string>
    <string name="ac_launch_register_tv">or</string>
    <string name="ac_launch_signin_btn">signin</string>
    <string name="ac_launch_register_btn">register</string>
    <string name="ac_launch_confirm_email_title">Please, confirm email address</string>
    <string name="ac_launch_confirm_email_body">We just sent you a email.\nFollow the link to verify your email address.</string>
    <string name="ac_launch_alert_register_failed">Register failed</string>
    <string name="ac_launch_alert_auth_failed">Authentication failed</string>
    <string name="ac_launch_alert_email_sent_successful">Email sent successful</string>
    <string name="ac_launch_alert_email_sent_fail">Fail to send email</string>
    <string name="ac_launch_alert_email_required">Email required.</string>
    <string name="ac_launch_alert_email_not_valid">Email address not valid.</string>
    <string name="ac_launch_alert_password_required">Password required.</string>
    <string name="ac_launch_email_CS">Email</string>
    <string name="ac_launch_password_CS">Password</string>
    <string name="ac_launch_error_weak_password">The given password is invalid. [ Password should be at least 6 characters ]</string>
    <string name="ac_launch_error_user_not_found">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="ac_launch_error_user_disabled">The user account has been disabled by an administrator.</string>
    <string name="ac_launch_error_email_already_in_use">The email address is already in use by another account.</string>
    <string name="ac_launch_error_wrong_password">The password is invalid or the user does not have a password</string>
    <string name="ac_launch_error_invalid_email">The email address is badly formatted</string>
    <string name="ac_launch_virify_email">Please, verify email.</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="menu_credits">Credits</string>
    <string name="menu_payout">Payout</string>
    <string name="menu_signout">SignOut</string>

    <string name="menu_action_mode_edit_credit">Edit credit</string>
    <string name="menu_action_mode_remove_credit">Remove credit</string>

    <string name="ac_credit_header_verifyed">verified</string>
    <string name="ac_credit_header_noverify">no verify</string>

    <string name="btnOk">OK</string>
    <string name="btnYes">YES</string>
    <string name="btnNo">NO</string>


    <string name="alert_confirm_deletion_title">Please, confirm deletion</string>
    <string name="alert_confirm_deletion_message">Are you really want to remove </string>
    <string name="alert_confirm_deletion_credit"> credit?</string>
    <string name="alert_confirm_deletion_credits"> credits?</string>

    <string name="add_credit_empty_fields">There are empty fields!</string>


    <string name="item_credit_percent_sign">%</string>
    <string name="item_credit_months">months</string>
    <string name="item_credit_rubles">rubles</string>

    <string name="item_resume_all_payments">All payments:</string>
    <string name="item_resume_overpayments">Overpayments:</string>

    <string name="item_payout_payout_date">payout date</string>
    <string name="item_payout_balance">balance:</string>
    <string name="item_payout_payout_amount">payout amount</string>

    <string name="fragment_add_credit_name">Credit Name</string>
    <string name="fragment_add_type_annuity">Annuity</string>
    <string name="fragment_add_type_differential">Differential</string>
    <string name="fragment_add_credit_amount">Amount</string>
    <string name="fragment_add_credit_rate">Rate</string>
    <string name="fragment_add_month_count">Month count</string>
    <string name="fragment_add_edit_date">Edit date</string>
    <string name="fragment_add_credit_set_date">Set Date</string>
    <string name="fragment_add_credit_credit_information">Credit Information</string>
    <string name="fragment_add_empty_name">Field Name is empty!</string>
    <string name="fragment_add_empty_amount">Field Amount is empty!</string>
    <string name="fragment_add_empty_month_count">Field Month count is empty!</string>
    <string name="fragment_add_empty_rate">Field Rate is empty!</string>
    <string name="fragment_add_empty_date">Field Date is empty!</string>

    <string name="credit_adapter_annuity_CS">Annuity</string>
    <string name="credit_adapter_differential_CS">Differential</string>
    <string name="credit_adapter_no_element_to_remove">No element to remove</string>
    <string name="credit_adapter_choose_one_element">Choose one element to edit</string>

    <string name="unknown_error_CS">Unknown error</string>
    <string name="credit_paid">Credit paid</string>

    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">December</string>

    <string name="item_diagram_title_date">Date</string>
    <string name="item_diagram_title_payout">Payout</string>
    <string name="item_diagram_title_ballance">Ballance</string>


</resources>
