<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="2dp"
    android:background="@color/colorPrimaryDark"
    >
    <TextView
        android:text="@string/item_diagram_title_date"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_weight="1"
        />
    <TextView
        android:text="@string/item_diagram_title_payout"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_weight="1"
        />
    <TextView
        android:text="@string/item_diagram_title_ballance"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_weight="1"
        />
</TableRow>