<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    app:cardBackgroundColor="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3"
            >
            <TextView
                android:id="@+id/tvPayoutCreditName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_weight="4"
                tools:text="Кредит на маленькую недорогую вещицу 000 000000 00 000000000 00 00000"
                />
            <TextView
                android:id="@+id/tvTitleNextPayoutDate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="bottom"
                android:text="@string/item_payout_payout_date"
                android:textColor="@android:color/black"
                android:textSize="8sp"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/tvNextPayoutDate"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="top"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                tools:text="2008.04.04"
                android:layout_weight="3"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                >
                <TextView
                    android:id="@+id/tvTitleBalance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_payout_balance"
                    android:textColor="@android:color/black"
                    android:textSize="10sp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:id="@+id/tvPayoutBalance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="10sp"
                    tools:text="1 000 000 000"
                    android:layout_weight="2"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/tvTitlePayoutAmount"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="bottom"
                android:text="@string/item_payout_payout_amount"
                android:textColor="@android:color/black"
                android:textSize="8sp"
                android:visibility="visible"
                android:layout_weight="1"
                 />
            <TextView
                android:id="@+id/tvNextMonthPayout"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="top"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_weight="3"
                tools:text="23555.23" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>